complete heuristic builder and final AI chat implementation

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
-# LLM Provider Configuration
-# Options: 'ollama', 'huggingface_inference', 'openai_compatible'
-LLM_PROVIDER="ollama"
+# backend/.env.example
 
-# Base URL for local Ollama instance (if used)
-OLLAMA_BASE_URL="http://localhost:11434"
+# --- AI Provider Configuration ---
+# The provider is now hardcoded to 'github' in the llm_provider service.
 
-# API Key for other providers (if used)
-# HF_API_KEY=""
-# OPENAI_API_KEY=""
+# --- GitHub Models Configuration ---
+# 1. Generate a new GitHub Personal Access Token (classic) with the 'models_read' scope.
+# 2. Never commit this token to your repository.
+GITHUB_TOKEN=""
+
+# --- Ollama Configuration (Kept for reference, but not used by default) ---
+# OLLAMA_BASE_URL="http://localhost:11434/v1"
